functionality to make authed call for users resource, configure for mobile testing

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,4 +14,9 @@
     <ion-input [(ngModel)]="password"></ion-input>
   </ion-item>
   <ion-button (click)="submit()">Submit</ion-button>
+  <br />
+  <ion-button (click)="fetchUsers()">Get User List</ion-button>
+  <div>
+    Users: {{users.length}}
+  </div>
 </ion-content>
